--- a/UPOSS/Views/AuthView.xaml
+++ b/UPOSS/Views/AuthView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:UPOSS.Views"
+             xmlns:properties="clr-namespace:UPOSS.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="800">
 
@@ -47,6 +48,7 @@
 
             <Grid Grid.Row="2" Margin="0 20">
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
@@ -110,6 +112,10 @@
                     Content="Exit"
                     FontSize="14"
                     Foreground="Blue" />
+
+                <TextBlock Grid.Row="5" HorizontalAlignment="Center" FontSize="15" FontFamily="Comic Sans MS">
+                    (<TextBlock Text="{Binding Source={x:Static properties:Settings.Default}, Path=CurrentApplicationVersion}"/>)
+                </TextBlock>
             </Grid>
         </Grid>
     </Border>
