--- a/UPOSS/Views/DashboardView.xaml
+++ b/UPOSS/Views/DashboardView.xaml
@@ -15,20 +15,66 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
+        <!--Navigation bar-->
         <controls:NavigationBar Grid.Column="0" DataContext="{Binding Navigator}"/>
 
-        <ContentControl Grid.Column="1">
-            <ContentControl.Content>
-                <Binding Path="Navigator.CurrentViewModel">
-                    <Binding.TargetNullValue>
-                        <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-                            <TextBlock FontSize="50" FontFamily="Courier New">~ Welcome to UPO$$ ~</TextBlock>
-                        </Grid>
-                    </Binding.TargetNullValue>
-                </Binding>
-            </ContentControl.Content>
-        </ContentControl>
+        <!--Content-->
+        <Grid Grid.Column="1">
+            <!--Trigger-->
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Setter Property="Visibility" Value="Collapsed" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsLoading}" Value="False">
+                            <Setter Property="Visibility" Value="Visible" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+
+            <ContentControl>
+                <ContentControl.Content>
+                    <Binding Path="Navigator.CurrentViewModel">
+                        <Binding.TargetNullValue>
+                            <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <TextBlock FontSize="50" FontFamily="Courier New">~ Welcome to UPO$$ ~</TextBlock>
+                            </Grid>
+                        </Binding.TargetNullValue>
+                    </Binding>
+                </ContentControl.Content>
+            </ContentControl>
+        </Grid>
+
         
+        <!--Loading Screen-->
+        <Grid Grid.Column="1">
+            <!--Trigger-->
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Setter Property="Visibility" Value="Collapsed" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsLoading}" Value="True">
+                            <Setter Property="Visibility" Value="Visible" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <!--Title-->
+                <TextBlock Text="Loading..." FontSize="42" FontWeight="Bold" HorizontalAlignment="Center" Foreground="DimGray" FontFamily="Microsoft Himalaya"/>
+
+                <!--Progress Bar-->
+                <Grid MinWidth="600" MaxWidth="800">
+                    <Rectangle Fill="DimGray" Margin="10 5" RadiusX="30" RadiusY="30"/>
+
+                    <Grid Margin="30 10">
+                        <ProgressBar Name="progressBar" Height="25" BorderBrush="Black" IsIndeterminate="True"/>
+                    </Grid>
+                </Grid>
+            </StackPanel>
+        </Grid>
+
     </Grid>
 
 </UserControl>
