--- a/UPOSS/Views/AuthView.xaml
+++ b/UPOSS/Views/AuthView.xaml
@@ -8,13 +8,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="800">
 
-
-    <!--<UserControl.Background>
-        <ImageBrush
-            ImageSource="/Resources/login-background.jpg"
-            Opacity="0.5"
-            Stretch="UniformToFill" />
-    </UserControl.Background>-->
     
     <Border Margin="25" Padding="50"
         HorizontalAlignment="Center"
@@ -46,7 +39,20 @@
                 FontWeight="Thin"
                 Text="The world's simplest Point of Sales system." />
 
+            <!--Content-->
             <Grid Grid.Row="2" Margin="0 20">
+                <!--Trigger-->
+                <Grid.Style>
+                    <Style TargetType="Grid">
+                        <Setter Property="Visibility" Value="Collapsed" />
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsLoading}" Value="False">
+                                <Setter Property="Visibility" Value="Visible" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Grid.Style>
+                
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
@@ -66,7 +72,7 @@
                     <TextBlock Grid.Column="0" Text="Username : " VerticalAlignment="Center" />
 
                     <StackPanel Grid.Column="1" Margin="20 0 0 0" FocusManager.FocusedElement="{Binding ElementName=TxtB}">
-                        <TextBox x:Name="TxtB" FontSize="15" Text="{Binding InputUser.Username, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBox x:Name="TxtB" Background="WhiteSmoke" FontSize="15" Text="{Binding InputUser.Username, UpdateSourceTrigger=PropertyChanged}"/>
                     </StackPanel>
                 </Grid>
 
@@ -77,7 +83,7 @@
                     </Grid.ColumnDefinitions>
 
                     <TextBlock Grid.Column="0" Text="Password : " VerticalAlignment="Center" />
-                    <PasswordBox Grid.Column="1" FontSize="15" Margin="20 0 0 0" PasswordChanged="PasswordBox_PasswordChanged"/>
+                    <PasswordBox Grid.Column="1" Background="WhiteSmoke" FontSize="15" Margin="20 0 0 0" PasswordChanged="PasswordBox_PasswordChanged"/>
                 </Grid>
 
                 <Grid Grid.Row="2" Margin="0 10">
@@ -116,6 +122,35 @@
                 <TextBlock Grid.Row="5" HorizontalAlignment="Center" FontSize="15" FontFamily="Comic Sans MS">
                     (<TextBlock Text="{Binding Source={x:Static properties:Settings.Default}, Path=CurrentApplicationVersion}"/>)
                 </TextBlock>
+            </Grid>
+
+            <!--Loading Screen-->
+            <Grid Grid.Row="2">
+                <!--Trigger-->
+                <Grid.Style>
+                    <Style TargetType="Grid">
+                        <Setter Property="Visibility" Value="Collapsed" />
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsLoading}" Value="True">
+                                <Setter Property="Visibility" Value="Visible" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Grid.Style>
+
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <!--Title-->
+                    <TextBlock Text="Loading..." FontSize="42" FontWeight="Bold" HorizontalAlignment="Center" Foreground="DimGray" FontFamily="Microsoft Himalaya"/>
+
+                    <!--Progress Bar-->
+                    <Grid MinWidth="600" MaxWidth="800">
+                        <Rectangle Fill="DimGray" Margin="10 5" RadiusX="30" RadiusY="30"/>
+
+                        <Grid Margin="30 10">
+                            <ProgressBar Name="progressBar" Height="25" BorderBrush="Black" IsIndeterminate="True"/>
+                        </Grid>
+                    </Grid>
+                </StackPanel>
             </Grid>
         </Grid>
     </Border>
