--- a/UPOSS/Views/BranchView.xaml
+++ b/UPOSS/Views/BranchView.xaml
@@ -8,62 +8,76 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="0.25*"/>
-        </Grid.ColumnDefinitions>
+        <!--Content-->
+        <Grid>
+            <!--Trigger-->
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Setter Property="Visibility" Value="Collapsed" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsLoading}" Value="False">
+                            <Setter Property="Visibility" Value="Visible" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
 
-        <Grid Grid.Column="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="0.25*"/>
-                <RowDefinition Height="0.1*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="0.25*"/>
+            </Grid.ColumnDefinitions>
 
-            <!--filter section-->
-            <Grid Grid.Row="0">
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="0.25*"/>
+                    <RowDefinition Height="0.1*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
 
-                <Rectangle Fill="White" Height="auto" Margin="15 10" RadiusX="10" RadiusY="10"/>
+                <!--filter section-->
+                <Grid Grid.Row="0">
 
-                <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="15 10">
+                    <Rectangle Fill="White" Height="auto" Margin="15 10" RadiusX="10" RadiusY="10"/>
+
+                    <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="15 10">
 
 
-                    <StackPanel Orientation="Horizontal" Margin="10 0">
-                        <TextBlock Text="Branch Name : " FontSize="16" FontWeight="Bold" VerticalAlignment="Center"/>
+                        <StackPanel Orientation="Horizontal" Margin="10 0">
+                            <TextBlock Text="Branch Name : " FontSize="16" FontWeight="Bold" VerticalAlignment="Center"/>
 
-                        <TextBox MinWidth="100"
+                            <TextBox MinWidth="100"
                          BorderBrush="Black" BorderThickness="1" MaxWidth="100"
                          Text="{Binding Path=InputBranch.Name, Mode=TwoWay}">
-                            <TextBox.Resources>
-                                <Style TargetType="{x:Type Border}">
-                                    <Setter Property="CornerRadius" Value="6"/>
-                                </Style>
-                            </TextBox.Resources>
-                        </TextBox>
-                    </StackPanel>
+                                <TextBox.Resources>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="CornerRadius" Value="6"/>
+                                    </Style>
+                                </TextBox.Resources>
+                            </TextBox>
+                        </StackPanel>
 
-                    <StackPanel Orientation="Horizontal" Margin="10 0">
-                        <TextBlock Text="Status :" FontSize="16" FontWeight="Bold" VerticalAlignment="Center"/>
+                        <StackPanel Orientation="Horizontal" Margin="10 0">
+                            <TextBlock Text="Status :" FontSize="16" FontWeight="Bold" VerticalAlignment="Center"/>
 
-                        <ComboBox  HorizontalAlignment="Center" HorizontalContentAlignment="Center" BorderBrush="Black" BorderThickness="1"
+                            <ComboBox  HorizontalAlignment="Center" HorizontalContentAlignment="Center" BorderBrush="Black" BorderThickness="1"
                               Margin="10 0" MinWidth="150" FontSize="15" MaxHeight="300" MaxWidth="300"
                               ItemsSource="{Binding StatusList}" SelectedItem="{Binding SelectedStatus}"
                                SelectedValue="Active"/>
-                    </StackPanel>
-                </WrapPanel>
-            </Grid>
+                        </StackPanel>
+                    </WrapPanel>
+                </Grid>
 
-            <!--horizontal seperate line-->
-            <Separator Grid.Row="1" BorderBrush="Black" BorderThickness="1" Margin="30" VerticalAlignment="Top"/>
+                <!--horizontal seperate line-->
+                <Separator Grid.Row="1" BorderBrush="Black" BorderThickness="1" Margin="30" VerticalAlignment="Top"/>
 
-            <Grid Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Top">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                </Grid.RowDefinitions>
+                <Grid Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Top">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                    </Grid.RowDefinitions>
 
-                <!--Branch list-->
-                <DataGrid Name="dgBranch" 
+                    <!--Branch list-->
+                    <DataGrid Name="dgBranch" 
                       Grid.Row="0"
                       HorizontalAlignment="Center"
                       AutoGenerateColumns="False"
@@ -76,109 +90,139 @@
                       Padding="9"
                       ItemsSource="{Binding Path=BranchList, Mode=TwoWay}"
                       SelectedItem="{Binding Path=SelectedBranch, Mode=TwoWay}">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header=""
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header=""
                                     Width="auto"
                                     Binding="{Binding Path=Id}" />
-                        <DataGridTextColumn Header="Branch Name"
+                            <DataGridTextColumn Header="Branch Name"
                                     Width="auto"
                                     Binding="{Binding Path=Name}" />
-                        <DataGridTextColumn Header="Status"
+                            <DataGridTextColumn Header="Status"
                                     Width="auto"
                                     Binding="{Binding Path=Is_active}" />
-                    </DataGrid.Columns>
-                </DataGrid>
+                        </DataGrid.Columns>
+                    </DataGrid>
 
-                <!--Pagination-->
-                <Grid MinWidth="600" MaxWidth="800" Grid.Row="1">
-                    <Rectangle Fill="DimGray" Height="auto" Margin="10 5" RadiusX="30" RadiusY="30"/>
+                    <!--Pagination-->
+                    <Grid MinWidth="600" MaxWidth="800" Grid.Row="1">
+                        <Rectangle Fill="DimGray" Height="auto" Margin="10 5" RadiusX="30" RadiusY="30"/>
 
-                    <Grid Margin="30 10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
+                        <Grid Margin="30 10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
 
-                        <WrapPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
-                            <Button Name="btnPrePage"
+                            <WrapPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
+                                <Button Name="btnPrePage"
                             Content="Prev"
                             Margin="5,8"
                             Padding="8"
                             Command="{Binding Path=PreviousPageCommand}" />
 
-                            <TextBox x:Name="tbPage" MinWidth="20" Width="auto"
+                                <TextBox x:Name="tbPage" MinWidth="20" Width="auto"
                             Margin="5 8" Foreground="WhiteSmoke"
                             VerticalContentAlignment="Center" HorizontalContentAlignment="Center" 
                             Text="{Binding Path=Pagination.CurrentPage, Mode=TwoWay}" />
 
-                            <Button Name="btnNxtPage"
+                                <Button Name="btnNxtPage"
                             Content="Next"
                             Margin="5,8"
                             Padding="8"
                             Command="{Binding Path=NextPageCommand}" />
 
-                            <Label FontSize="14" VerticalContentAlignment="Center">
-                                <TextBlock>
+                                <Label FontSize="14" VerticalContentAlignment="Center">
+                                    <TextBlock>
                                     of  <Bold><TextBlock Text="{Binding Path=Pagination.TotalPage, Mode=TwoWay}"/></Bold>  pages
                                 </TextBlock>
-                            </Label>
-                        </WrapPanel>
+                                </Label>
+                            </WrapPanel>
 
-                        <WrapPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right">
-                            <Label FontSize="14" VerticalContentAlignment="Center">
-                                <TextBlock>
+                            <WrapPanel Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Right">
+                                <Label FontSize="14" VerticalContentAlignment="Center">
+                                    <TextBlock>
                                     Showing  <Bold><TextBlock Text="{Binding Path=Pagination.CurrentRecord, Mode=TwoWay}"/></Bold>  out of  <Bold><TextBlock Text="{Binding Path=Pagination.TotalRecord, Mode=TwoWay}"/></Bold>  records
                                 </TextBlock>
-                            </Label>
-                        </WrapPanel>
+                                </Label>
+                            </WrapPanel>
+                        </Grid>
                     </Grid>
                 </Grid>
+
             </Grid>
 
-        </Grid>
-
-        <!--Buttons-->
-        <Grid Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100">
-            <StackPanel Orientation="Vertical"
+            <!--Buttons-->
+            <Grid Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100">
+                <StackPanel Orientation="Vertical"
                     Grid.Column="1">
-                <Button Name="btnSearch"
+                    <Button Name="btnSearch"
                     Content="SEARCH"
                     Margin="5,8"
                     Padding="3"
                     Command="{Binding Path=SearchCommand}" />
-                <Button Name="btnAdd"
+                    <Button Name="btnAdd"
                     Content="ADD"
                     Margin="5,8"
                     Padding="3"
                     Command="{Binding Path=AddCommand}" />
-                <Button Name="btnUpdate"
+                    <Button Name="btnUpdate"
                     Content="UPDATE"
                     Margin="5,8"
                     Padding="3"
                     Command="{Binding Path=UpdateCommand}" />
-                <!--<Button Name="btnDelete"
+                    <!--<Button Name="btnDelete"
                     Content="DELETE"
                     Margin="5,8"
                     Padding="3"
                     Command="{Binding Path=DeleteCommand}" />-->
 
-                <Grid>
-                    <Rectangle Fill="White" Height="auto" Margin="5 12" RadiusX="10" RadiusY="10"/>
+                    <Grid>
+                        <Rectangle Fill="White" Height="auto" Margin="5 12" RadiusX="10" RadiusY="10"/>
 
-                    <WrapPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10 10">
-                        <Button Name="btnActivate"
+                        <WrapPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10 10">
+                            <Button Name="btnActivate"
                             Width="100"
                             Content="Activate"
                             Margin="5,8"
                             Padding="3"
                             Command="{Binding Path=ActivateCommand}" />
-                        <Button Name="btnAvticate"
+                            <Button Name="btnAvticate"
                             Width="100"
                             Content="Deactivate"
                             Margin="5,8"
                             Padding="3"
                             Command="{Binding Path=DeactivateCommand}" />
-                    </WrapPanel>
+                        </WrapPanel>
+                    </Grid>
+                </StackPanel>
+            </Grid>
+        </Grid>
+
+        <!--Loading Screen-->
+        <Grid>
+            <!--Trigger-->
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Setter Property="Visibility" Value="Collapsed" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsLoading}" Value="True">
+                            <Setter Property="Visibility" Value="Visible" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <!--Title-->
+                <TextBlock Text="Loading..." FontSize="42" FontWeight="Bold" HorizontalAlignment="Center" Foreground="DimGray" FontFamily="Microsoft Himalaya"/>
+
+                <!--Progress Bar-->
+                <Grid MinWidth="600" MaxWidth="800">
+                    <Rectangle Fill="DimGray" Margin="10 5" RadiusX="30" RadiusY="30"/>
+
+                    <Grid Margin="30 10">
+                        <ProgressBar Name="progressBar" Height="25" BorderBrush="Black" IsIndeterminate="True"/>
+                    </Grid>
                 </Grid>
             </StackPanel>
         </Grid>
