--- a/UPOSS/Views/UserView.xaml
+++ b/UPOSS/Views/UserView.xaml
@@ -30,6 +30,7 @@
                 <ColumnDefinition Width="0.25*"/>
             </Grid.ColumnDefinitions>
 
+            <!--Main Section-->
             <Grid Grid.Column="0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="0.25*"/>
@@ -136,7 +137,7 @@
 
             <Grid Grid.Column="1" >
                 <!--Curernt User card-->
-                <StackPanel Orientation="Vertical" VerticalAlignment="Top">
+                <!--<StackPanel Orientation="Vertical" VerticalAlignment="Top">
                     <Grid Margin="0 10">
                         <Rectangle Fill="LightGray" Height="auto" Margin="10 5" RadiusX="30" RadiusY="30"/>
 
@@ -163,8 +164,9 @@
                             </StackPanel>
                         </StackPanel>
                     </Grid>
-                </StackPanel>
+                </StackPanel>-->
 
+                <!--Buttons Section-->
                 <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" MinWidth="100">
                     <Button Name="btnSearch"
                     Content="SEARCH"
